--- a/HomePage.html
+++ b/HomePage.html
@@ -65,7 +65,7 @@
 
 		<!-- Header Icon -->
 		<div class="header-icons">
-			<a href="#" class="header-wrapicon1 dis-block">
+			<a href="login.html" class="header-wrapicon1 dis-block">
 				<img src="images/icons/icon-header-01.png" class="header-icon1" alt="ICON">
 			</a>
 
@@ -138,7 +138,7 @@
 							</li>
 
 							<li>
-								<a href="product.html">Shop</a>
+								<a href="product.html">Menu</a>
 							</li>
 
 							<li>
@@ -150,7 +150,7 @@
 
 				<!-- Header Icon -->
 				<div class="header-icons">
-					<a href="#" class="header-wrapicon1 dis-block">
+					<a href="login.html" class="header-wrapicon1 dis-block">
 						<img src="images/icons/icon-header-01.png" class="header-icon1" alt="ICON">
 					</a>
 
