--- a/cart.html
+++ b/cart.html
@@ -82,7 +82,7 @@
 
 				<!-- Header Icon -->
 				<div class="header-icons">
-					<a href="#" class="header-wrapicon1 dis-block">
+					<a href="login.html" class="header-wrapicon1 dis-block">
 						<img src="images/icons/icon-header-01.png" class="header-icon1" alt="ICON">
 					</a>
 
@@ -138,16 +138,11 @@
 
 	</header>
 
-	<!-- Title Page -->
-	<section class="bg-title-page p-t-40 p-b-50 flex-col-c-m" style="background-image: url(images/heading-pages-01.jpg);">
-		<h2 class="l-text2 t-center">
-			Cart
-		</h2>
-	</section>
+
 
 
 	<!-- Cart -->
-	<section class="cart bgwhite p-t-70 p-b-100">
+	<section class="cart bgwhite p-t-25 p-b-25">
 		<div class="container">
 			<!-- Cart item -->
 			<div class="container-table-cart pos-relative">
