--- a/contact.html
+++ b/contact.html
@@ -74,7 +74,7 @@
 
 				<!-- Header Icon -->
 				<div class="header-icons">
-					<a href="login.html" class="header-wrapicon1 dis-block">
+					<a href="#" class="header-wrapicon1 dis-block">
 						<img src="images/icons/icon-header-01.png" class="header-icon1" alt="ICON">
 					</a>
 
@@ -136,7 +136,7 @@
 	<section class="bgwhite p-t-66 p-b-60">
 		<div class="container">
 				<div class="col-md-6 p-b-30">
-					<form class="leave-comment">
+					<form class="leave-comment" action="http://example.com" method="get">
 						<h4 class="m-text26 p-b-36 p-t-15">
 							Send us your message
 						</h4>
@@ -231,6 +231,11 @@
 	<script src="js/map-custom.js"></script>
 <!--===============================================================================================-->
 	<script src="js/main.js"></script>
-
+	<script>
+	
+	function submitContact() {
+		alert("the contact form was submitted");
+	}
+	</script>
 </body>
 </html>
