--- a/HomePage.html
+++ b/HomePage.html
@@ -277,9 +277,9 @@
 									</div>
 
 									<div class="block2-txt p-t-20">
-										<a href="product-detail.html" class="block2-name dis-block s-text3 p-b-5">
+										<span class="block2-name dis-block s-text3 p-b-5">
 											Egg on Toast Accompanied by A Selection of Seasonal Fruit
-										</a>
+										</span>
 
 										<span class="block2-price m-text6 p-r-5">
 											$16.50
@@ -306,9 +306,9 @@
 									</div>
 
 									<div class="block2-txt p-t-20">
-										<a href="product-detail.html" class="block2-name dis-block s-text3 p-b-5">
+										<span class="block2-name dis-block s-text3 p-b-5">
 											Spicy Chicken on a Bed of Flavored Rice with an Accompaniment of Sauces
-										</a>
+										</span>
 
 										<span class="block2-price m-text6 p-r-5">
 											$27.00
@@ -335,9 +335,9 @@
 									</div>
 
 									<div class="block2-txt p-t-20">
-										<a href="product-detail.html" class="block2-name dis-block s-text3 p-b-5">
+										<span class="block2-name dis-block s-text3 p-b-5">
 											Exotic Fruit Platter for 2
-										</a>
+										</span>
 
 										<span class="block2-price m-text6 p-r-5">
 											$24.00
@@ -364,9 +364,9 @@
 									</div>
 
 									<div class="block2-txt p-t-20">
-										<a href="product-detail.html" class="block2-name dis-block s-text3 p-b-5">
+										<span class="block2-name dis-block s-text3 p-b-5">
 											Roast Pork Drizzled in a Lemon Aioli with Seasonal Vegetables for 2 
-										</a>
+										</span>
 
 										<span class="block2-price m-text6 p-r-5">
 											$38.00
@@ -393,9 +393,9 @@
 									</div>
 
 									<div class="block2-txt p-t-20">
-										<a href="product-detail.html" class="block2-name dis-block s-text3 p-b-5">
+										<span class="block2-name dis-block s-text3 p-b-5">
 											Grilled Salmon Served with Roast Potatoes, Parsnip and Sweet Potatoes
-										</a>
+										</span>
 
 										<span class="block2-price m-text6 p-r-5">
 											$26.00
@@ -422,9 +422,9 @@
 									</div>
 
 									<div class="block2-txt p-t-20">
-										<a href="product-detail.html" class="block2-name dis-block s-text3 p-b-5">
+										<span class="block2-name dis-block s-text3 p-b-5">
 											Egg on Avocado Toast
-										</a>
+										</span>
 
 										<span class="block2-price m-text6 p-r-5">
 											$15.00
@@ -451,9 +451,9 @@
 									</div>
 
 									<div class="block2-txt p-t-20">
-										<a href="product-detail.html" class="block2-name dis-block s-text3 p-b-5">
+										<span class="block2-name dis-block s-text3 p-b-5">
 											Fried Buffalo Chicken Sandwich with Bleu Cheese Dressing and Arugula 
-										</a>
+										</span>
 
 										<span class="block2-price m-text6 p-r-5">
 											$22.00
@@ -480,9 +480,9 @@
 									</div>
 
 									<div class="block2-txt p-t-20">
-										<a href="product-detail.html" class="block2-name dis-block s-text3 p-b-5">
+										<span class="block2-name dis-block s-text3 p-b-5">
 											Breakfast Sandwich - Runny Poached Egg, Bacon and All the Fillings
-										</a>
+										</span>
 
 										<span class="block2-price m-text6 p-r-5">
 											$18.00
@@ -515,9 +515,9 @@
 									</div>
 
 									<div class="block2-txt p-t-20">
-										<a href="product-detail.html" class="block2-name dis-block s-text3 p-b-5">
+										<span class="block2-name dis-block s-text3 p-b-5">
 											Teriyaki Chicken Sub
-										</a>
+										</span>
 
 										<span class="block2-price m-text6 p-r-5">
 											$18.00
@@ -544,9 +544,9 @@
 									</div>
 
 									<div class="block2-txt p-t-20">
-										<a href="product-detail.html" class="block2-name dis-block s-text3 p-b-5">
+										<span class="block2-name dis-block s-text3 p-b-5">
 												The Ultimate Burger with All The Fillings
-										</a>
+										</span>
 
 										<span class="block2-price m-text6 p-r-5">
 											$23.00
@@ -573,9 +573,9 @@
 									</div>
 
 									<div class="block2-txt p-t-20">
-										<a href="product-detail.html" class="block2-name dis-block s-text3 p-b-5">
+										<span class="block2-name dis-block s-text3 p-b-5">
 											Prawn Roll with Spinach
-										</a>
+										</span>
 
 										<span class="block2-price m-text6 p-r-5">
 											$17.00
@@ -602,9 +602,9 @@
 									</div>
 
 									<div class="block2-txt p-t-20">
-										<a href="product-detail.html" class="block2-name dis-block s-text3 p-b-5">
+										<span class="block2-name dis-block s-text3 p-b-5">
 											Fettaccini in a Creamy Sauce with Tomatoes, Spinach and Ricotta Cheese
-										</a>
+										</span>
 
 										<span class="block2-price m-text6 p-r-5">
 											$35.00
@@ -631,9 +631,9 @@
 									</div>
 
 									<div class="block2-txt p-t-20">
-										<a href="product-detail.html" class="block2-name dis-block s-text3 p-b-5">
+										<span class="block2-name dis-block s-text3 p-b-5">
 											Sushi Platter for 2
-										</a>
+										</span>
 
 										<span class="block2-price m-text6 p-r-5">
 											$35.00
@@ -659,9 +659,9 @@
 									</div>
 
 									<div class="block2-txt p-t-20">
-										<a href="product-detail.html" class="block2-name dis-block s-text3 p-b-5">
+										<span class="block2-name dis-block s-text3 p-b-5">
 											Spaghetti Bolognaise
-										</a>
+										</span>
 
 										<span class="block2-price m-text6 p-r-5">
 											$27.00
@@ -688,9 +688,9 @@
 									</div>
 
 									<div class="block2-txt p-t-20">
-										<a href="product-detail.html" class="block2-name dis-block s-text3 p-b-5">
+										<span class="block2-name dis-block s-text3 p-b-5">
 											Garden Pizza with Sun-dried Tomatoes, Basil and Pesto
-										</a>
+										</span>
 
 										<span class="block2-price m-text6 p-r-5">
 											$19.00
