--- a/product.html
+++ b/product.html
@@ -239,9 +239,9 @@
 								</div>
 
 								<div class="block2-txt p-t-20">
-									<a href="product-detail.html" class="block2-name dis-block s-text3 p-b-5">
+									<span class="block2-name dis-block s-text3 p-b-5">
 										Egg on Toast Accompanied by a Selection of Seasonal Fruit
-									</a>
+									</span>
 
 									<span class="block2-price m-text6 p-r-5">
 										$16.50
@@ -268,9 +268,9 @@
 								</div>
 
 								<div class="block2-txt p-t-20">
-									<a href="product-detail.html" class="block2-name dis-block s-text3 p-b-5">
+									<span class="block2-name dis-block s-text3 p-b-5">
 										Egg on Avocado Toast
-									</a>
+									</span>
 
 									<span class="block2-price m-text6 p-r-5">
 										$15.00
@@ -297,9 +297,9 @@
 								</div>
 
 								<div class="block2-txt p-t-20">
-									<a href="product-detail.html" class="block2-name dis-block s-text3 p-b-5">
+									<span class="block2-name dis-block s-text3 p-b-5">
 										Exotic Fruit Platter for 2
-									</a>
+									</span>
 
 									<span class="block2-price m-text6 p-r-5">
 										$24.00
@@ -326,9 +326,9 @@
 								</div>
 
 								<div class="block2-txt p-t-20">
-									<a href="product-detail.html" class="block2-name dis-block s-text3 p-b-5">
+									<span class="block2-name dis-block s-text3 p-b-5">
 										Fried Buffalo Chicken Sandwich with Bleu Cheese Dressing and Arugula
-									</a>
+									</span>
 
 									<span class="block2-price m-text6 p-r-5">
 										$22.00
@@ -355,9 +355,9 @@
 								</div>
 
 								<div class="block2-txt p-t-20">
-									<a href="product-detail.html" class="block2-name dis-block s-text3 p-b-5">
+									<span class="block2-name dis-block s-text3 p-b-5">
 										Breakfast Sandwich - Runny Poached Egg, Bacon and All the Fillings
-									</a>
+									</span>
 
 									<span class="block2-price m-text6 p-r-5">
 										$125.00
@@ -384,9 +384,9 @@
 								</div>
 
 								<div class="block2-txt p-t-20">
-									<a href="product-detail.html" class="block2-name dis-block s-text3 p-b-5">
+									<span class="block2-name dis-block s-text3 p-b-5">
 										Teriyaki Chicken Sub
-									</a>
+									</span>
 
 									<span class="block2-price m-text6 p-r-5">
 										$18.00
@@ -413,9 +413,9 @@
 								</div>
 
 								<div class="block2-txt p-t-20">
-									<a href="product-detail.html" class="block2-name dis-block s-text3 p-b-5">
+									<span class="block2-name dis-block s-text3 p-b-5">
 										Spicy Chicken on a Bed of Flavored Rice with an Accompaniment of Sauces
-									</a>
+									</span>
 
 									<span class="block2-price m-text6 p-r-5">
 										$27.00
@@ -442,9 +442,9 @@
 								</div>
 
 								<div class="block2-txt p-t-20">
-									<a href="product-detail.html" class="block2-name dis-block s-text3 p-b-5">
+									<span class="block2-name dis-block s-text3 p-b-5">
 										Roast Pork Drizzled in a Lemon Aioli with Seasonal Vegetables for 2
-									</a>
+									</span>
 
 									<span class="block2-price m-text6 p-r-5">
 										$38.00
@@ -471,9 +471,9 @@
 								</div>
 
 								<div class="block2-txt p-t-20">
-									<a href="product-detail.html" class="block2-name dis-block s-text3 p-b-5">
+									<span class="block2-name dis-block s-text3 p-b-5">
 										Grilled Salmon Served with Roast Potatoes, Parsnip and Sweet Potatoes
-									</a>
+									</span>
 
 									<span class="block2-price m-text6 p-r-5">
 										$26.00
@@ -500,9 +500,9 @@
 								</div>
 
 								<div class="block2-txt p-t-20">
-									<a href="product-detail.html" class="block2-name dis-block s-text3 p-b-5">
+									<span class="block2-name dis-block s-text3 p-b-5">
 										The Ultimate Burger with All The Fillings
-									</a>
+									</span>
 
 									<span class="block2-price m-text6 p-r-5">
 										$23.00
@@ -529,9 +529,9 @@
 								</div>
 
 								<div class="block2-txt p-t-20">
-									<a href="product-detail.html" class="block2-name dis-block s-text3 p-b-5">
+									<span class="block2-name dis-block s-text3 p-b-5">
 										Prawn Roll with Spinach
-									</a>
+									</span>
 
 									<span class="block2-price m-text6 p-r-5">
 										$17.00
@@ -558,9 +558,9 @@
 								</div>
 
 								<div class="block2-txt p-t-20">
-									<a href="product-detail.html" class="block2-name dis-block s-text3 p-b-5">
+									<span class="block2-name dis-block s-text3 p-b-5">
 										Fettuccini in a Creamy Sauce with Tomatoes, Spinach and Ricotta Cheese
-									</a>
+									</span>
 
 									<span class="block2-price m-text6 p-r-5">
 										$35.00
