--- a/HomePage.html
+++ b/HomePage.html
@@ -37,6 +37,8 @@
 </head>
 <body class="animsition">
 
+	<div class = "page-wrap">
+
 	<!-- header fixed -->
 	<div class="wrap_header fixed-header2 trans-0-4">
 		<!-- Logo -->
@@ -91,7 +93,7 @@
 
 						<div class="header-cart-wrapbtn">
 							<!-- Button -->
-							<a href="#" class="flex-c-m size1 bg1 bo-rad-20 hov1 s-text1 trans-0-4">
+							<a href="checkout.html" class="flex-c-m size1 bg1 bo-rad-20 hov1 s-text1 trans-0-4">
 								Check Out
 							</a>
 						</div>
@@ -103,7 +105,7 @@
 
 	<!-- Header -->
 	<header class="header1">
-		<!-- Header desktop -->
+		<!-- Header -->
 		<div class="container-menu-header">
 			<div class="topbar">
 				<div class="topbar-social">
@@ -193,7 +195,7 @@
 
 								<div class="header-cart-wrapbtn">
 									<!-- Button -->
-									<a href="#" class="flex-c-m size1 bg1 bo-rad-20 hov1 s-text1 trans-0-4">
+									<a href="checkout.html" class="flex-c-m size1 bg1 bo-rad-20 hov1 s-text1 trans-0-4">
 										Check Out
 									</a>
 								</div>
@@ -788,5 +790,6 @@
 <!--===============================================================================================-->
 	<script src="js/main.js"></script>
 
+</div>
 </body>
 </html>
