--- a/contact.html
+++ b/contact.html
@@ -119,7 +119,7 @@
 
 								<div class="header-cart-wrapbtn">
 									<!-- Button -->
-									<a href="#" class="flex-c-m size1 bg1 bo-rad-20 hov1 s-text1 trans-0-4">
+									<a href="checkout.html" class="flex-c-m size1 bg1 bo-rad-20 hov1 s-text1 trans-0-4">
 										Check Out
 									</a>
 								</div>
@@ -136,7 +136,7 @@
 	<section class="bgwhite p-t-66 p-b-60">
 		<div class="container">
 				<div class="col-md-6 p-b-30">
-					<form class="leave-comment" action="http://example.com" method="get">
+					<form class="leave-comment">
 						<h4 class="m-text26 p-b-36 p-t-15">
 							Send us your message
 						</h4>
@@ -231,11 +231,6 @@
 	<script src="js/map-custom.js"></script>
 <!--===============================================================================================-->
 	<script src="js/main.js"></script>
-	<script>
-	
-	function submitContact() {
-		alert("the contact form was submitted");
-	}
-	</script>
+
 </body>
 </html>
