--- a/HomePage.html
+++ b/HomePage.html
@@ -265,6 +265,7 @@
 
 	<!--Our Products -->
 	<class="bgwhite p-t-66 p-b-60">
+				<center>
 					<div class="row">
  						<div class="column">
     					
@@ -359,8 +360,8 @@
 
 
 
-
-							<div class="block2-img wrap-pic-w of-hidden pos-relative">
+							<div class="block2">
+								<div class="block2-img wrap-pic-w of-hidden pos-relative">
 									<img src="images/breakfast2.jpg" alt="IMG-PRODUCT">
 
 									<div class="block2-overlay trans-0-4">
@@ -383,6 +384,7 @@
 										$15.00
 									</span>
 								</div>
+							</div>
 
 
 						</p>
@@ -392,6 +394,7 @@
 						<div class="column">
 
 						<p>
+							<div class="block2">
 								<div class="block2-img wrap-pic-w of-hidden pos-relative">
 									<img src="images/dinner7.jpg" alt="IMG-PRODUCT">
 
@@ -415,7 +418,10 @@
 										$35.00
 									</span>
 								</div>
+							</div>
 
+
+							<div class="block2">
 								<div class="block2-img wrap-pic-w of-hidden pos-relative">
 									<img src="images/lunch1.jpg" alt="IMG-PRODUCT">
 
@@ -439,6 +445,7 @@
 										$22.00
 									</span>
 								</div>
+							</div>
 
 
 						</p>
@@ -448,6 +455,7 @@
 						<div class="column">
 
 						<p>
+							<div class="block2">
 								<div class="block2-img wrap-pic-w of-hidden pos-relative">
 									<img src="images/dinner2.jpg" alt="IMG-PRODUCT">
 
@@ -471,10 +479,11 @@
 										$38.00
 									</span>
 								</div>
+							</div>
 
 
 
-<div class="block2">
+							<div class="block2">
 								<div class="block2-img wrap-pic-w of-hidden pos-relative">
 									<img src="images/breakfast2.jpg" alt="IMG-PRODUCT">
 
@@ -503,6 +512,7 @@
 						</p>
 						</div>
   					</div>
+				</center>
 
 
 
