--- a/checkout.html
+++ b/checkout.html
@@ -353,6 +353,14 @@
 
 
 
+					<div class="w-size25">
+						<!-- Button -->
+						<a href="congrats.html" class="flex-c-m size2 bg1 hov1 m-text3 trans-0-4">
+							Check Out!
+						</a>
+					</div>
+
+
 
 
 
