--- a/checkout.html
+++ b/checkout.html
@@ -231,41 +231,41 @@
     					
 						<h4 class="m-text26 p-b-15 p-t-35">Shipping Information</h4>
     						<p>
-						<div class="bo4 of-hidden size13 m-b-20">
+						<form class="bo4 of-hidden size13 m-b-20">
 							<input class="sizefull s-text7 p-l-22 p-r-22" type="text" name="name" placeholder="First Name">
-						</div>
+						</form>
 
-						<div class="bo4 of-hidden size13 m-b-20">
+						<form class="bo4 of-hidden size13 m-b-20">
 							<input class="sizefull s-text7 p-l-22 p-r-22" type="text" name="phone-number" placeholder="Family Name">
-						</div>
+						</form>
 
-						<div class="bo4 of-hidden size13 m-b-20">
+						<form class="bo4 of-hidden size13 m-b-20">
 							<input class="sizefull s-text7 p-l-22 p-r-22" type="text" name="email" placeholder="Email Address">
-						</div>
+						</form>
 
-						<div class="bo4 of-hidden size13 m-b-20">
+						<form class="bo4 of-hidden size13 m-b-20">
 							<input class="sizefull s-text7 p-l-22 p-r-22" type="text" name="name" placeholder="Phone Number">
-						</div>
+						</form>
 
-						<div class="bo4 of-hidden size13 m-b-20">
+						<form class="bo4 of-hidden size13 m-b-20">
 							<input class="sizefull s-text7 p-l-22 p-r-22" type="text" name="name" placeholder="Address Line 1">
-						</div>
+						</form>
 
-						<div class="bo4 of-hidden size13 m-b-20">
+						<form class="bo4 of-hidden size13 m-b-20">
 							<input class="sizefull s-text7 p-l-22 p-r-22" type="text" name="name" placeholder="Address Line 2">
-						</div>
+						</form>
 
-						<div class="bo4 of-hidden size13 m-b-20">
+						<form class="bo4 of-hidden size13 m-b-20">
 							<input class="sizefull s-text7 p-l-22 p-r-22" type="text" name="name" placeholder="City">
-						</div>
+						</form>
 
-						<div class="bo4 of-hidden size13 m-b-20">
+						<form class="bo4 of-hidden size13 m-b-20">
 							<input class="sizefull s-text7 p-l-22 p-r-22" type="text" name="name" placeholder="State">
-						</div>
+						</form>
 
-						<div class="bo4 of-hidden size13 m-b-20">
+						<form class="bo4 of-hidden size13 m-b-20">
 							<input class="sizefull s-text7 p-l-22 p-r-22" type="text" name="name" placeholder="Zip Code">
-						</div>
+						</form>
 						</p>
 						</div>
   
@@ -274,41 +274,41 @@
 
     						<h4 class="m-text26 p-b-15 p-t-35">Billing Information</h4>
     						<p>
-						<div class="bo4 of-hidden size13 m-b-20">
+						<form class="bo4 of-hidden size13 m-b-20">
 							<input class="sizefull s-text7 p-l-22 p-r-22" type="text" name="name" placeholder="First Name">
-						</div>
+						</form>
 
-						<div class="bo4 of-hidden size13 m-b-20">
+						<form class="bo4 of-hidden size13 m-b-20">
 							<input class="sizefull s-text7 p-l-22 p-r-22" type="text" name="phone-number" placeholder="Family Name">
-						</div>
+						</form>
 
-						<div class="bo4 of-hidden size13 m-b-20">
+						<form class="bo4 of-hidden size13 m-b-20">
 							<input class="sizefull s-text7 p-l-22 p-r-22" type="text" name="email" placeholder="Email Address">
-						</div>
+						</form>
 
-						<div class="bo4 of-hidden size13 m-b-20">
+						<form class="bo4 of-hidden size13 m-b-20">
 							<input class="sizefull s-text7 p-l-22 p-r-22" type="text" name="name" placeholder="Phone Number">
-						</div>
+						</form>
 
-						<div class="bo4 of-hidden size13 m-b-20">
+						<form class="bo4 of-hidden size13 m-b-20">
 							<input class="sizefull s-text7 p-l-22 p-r-22" type="text" name="name" placeholder="Address Line 1">
-						</div>
+						</form>
 
-						<div class="bo4 of-hidden size13 m-b-20">
+						<form class="bo4 of-hidden size13 m-b-20">
 							<input class="sizefull s-text7 p-l-22 p-r-22" type="text" name="name" placeholder="Address Line 2">
-						</div>
+						</form>
 
-						<div class="bo4 of-hidden size13 m-b-20">
+						<form class="bo4 of-hidden size13 m-b-20">
 							<input class="sizefull s-text7 p-l-22 p-r-22" type="text" name="name" placeholder="City">
-						</div>
+						</form>
 
-						<div class="bo4 of-hidden size13 m-b-20">
+						<form class="bo4 of-hidden size13 m-b-20">
 							<input class="sizefull s-text7 p-l-22 p-r-22" type="text" name="name" placeholder="State">
-						</div>
+						</form>
 
-						<div class="bo4 of-hidden size13 m-b-20">
+						<form class="bo4 of-hidden size13 m-b-20">
 							<input class="sizefull s-text7 p-l-22 p-r-22" type="text" name="name" placeholder="Zip Code">
-						</div>
+						</form>
 						</p>
   						</div>
   
@@ -327,25 +327,25 @@
 
 
 
-						<div class="bo4 of-hidden size13 m-b-20">
+						<form class="bo4 of-hidden size13 m-b-20">
 							<input class="sizefull s-text7 p-l-22 p-r-22" type="text" name="name-on-card" placeholder="Name on Card">
-						</div>
+						</form>
 
-						<div class="bo4 of-hidden size13 m-b-20">
+						<form class="bo4 of-hidden size13 m-b-20">
 							<input class="sizefull s-text7 p-l-22 p-r-22" type="text" name="credit-card-number" placeholder="Family Name">
-						</div>
+						</form>
 
-						<div class="bo4 of-hidden size13 m-b-20">
+						<form class="bo4 of-hidden size13 m-b-20">
 							<input class="sizefull s-text7 p-l-22 p-r-22" type="text" name="exp-month" placeholder="Expiration Month">
-						</div>
+						</form>
 
-						<div class="bo4 of-hidden size13 m-b-20">
+						<form class="bo4 of-hidden size13 m-b-20">
 							<input class="sizefull s-text7 p-l-22 p-r-22" type="text" name="exp-year" placeholder="Expiration Year">
-						</div>
+						</form>
 
-						<div class="bo4 of-hidden size13 m-b-20">
+						<form class="bo4 of-hidden size13 m-b-20">
 							<input class="sizefull s-text7 p-l-22 p-r-22" type="text" name="cvv" placeholder="CVV">
-						</div>
+						</form>
 						</p>
   						</div>
 					</div>
