--- a/checkout.html
+++ b/checkout.html
@@ -230,7 +230,7 @@
  							<div class="column">
     					
 
-					<form class="personal-information">
+					<form class="personal-information" action="checkout.php" method="post">
 						<h4 class="m-text26 p-b-15 p-t-35">Shipping Information</h4>
     						<p>
 						
