--- a/HomePage.html
+++ b/HomePage.html
@@ -459,7 +459,7 @@
 
 							<div class="block2">
 								<div class="block2-img wrap-pic-w of-hidden pos-relative">
-									<img src="images/breakfast2.jpg" alt="IMG-PRODUCT">
+									<img src="images/lunch2.jpg" alt="IMG-PRODUCT">
 
 									<div class="block2-overlay trans-0-4">
 										
@@ -474,11 +474,11 @@
 
 								<div class="block2-txt p-t-20">
 									<span class="block2-name dis-block s-text3 p-b-5">
-										Egg on Avocado Toast
+										Breakfast Sandwich - Runny Poached Egg with Classic Fillings
 									</span>
 
 									<span class="block2-price m-text6 p-r-5">
-										$15.00
+										$18.00
 									</span>
 								</div>
 							</div>
