--- a/login.html
+++ b/login.html
@@ -137,14 +137,14 @@
 	<section class="bgwhite p-t-66 p-b-60">
 		<div class="container">
 				<div class="col-md-6 p-b-30">
-					<form class="leave-comment">
+					<form action="include/login.php" method="GET" class="leave-comment">
 						<h4 class="m-text26 p-b-36 p-t-15">
 							Username	
 						</h4>
 
 
 						<div class="bo4 of-hidden size15 m-b-20">
-							<input class="sizefull s-text7 p-l-22 p-r-22" type="text" name="name" placeholder="Full Name">
+							<input class="sizefull s-text7 p-l-22 p-r-22" type="text" name="email" placeholder="Email">
 						</div>
 
 
@@ -155,7 +155,7 @@
 
 
 						<div class="bo4 of-hidden size15 m-b-20">
-							<input class="sizefull s-text7 p-l-22 p-r-22" type="text" name="name" placeholder="Password">
+							<input class="sizefull s-text7 p-l-22 p-r-22" type="password" name="pwd" placeholder="Password">
 						</div>
 
 
