changed ed login to redirect to homepage

--- a/login.html
+++ b/login.html
@@ -162,9 +162,8 @@
 
 						<div class="w-size25">
 							<!-- Button -->
-							<a href="HomePage.html" class="flex-c-m size2 bg1 bo-rad-23 hov1 m-text3 trans-0-4">
-								Log In
-							</a>
+							<button class="flex-c-m size2 bg1 bo-rad-23 hov1 m-text3 trans-0-4" type="submit" name="submit"> login </button>
+
 						</div>
 
 						<h4 class="m-text8 p-b-20 p-t-75">
