edited createaccount.html to redirect to include/signup.php

--- a/create-account.html
+++ b/create-account.html
@@ -137,25 +137,25 @@
 	<section class="bgwhite p-t-66 p-b-60">
 		<div class="container">
 				<div class="col-md-6 p-b-30">
-					<form class="leave-comment">
+					<form action="signup.php" method="POST" class="leave-comment">
 						<h4 class="m-text15 p-b-20 p-t-5">
 							First Name	
 						</h4>
 
 
 						<div class="bo4 of-hidden size15 m-b-20">
-							<input class="sizefull s-text7 p-l-22 p-r-22" type="text" name="name" placeholder="First Name">
+							<input class="sizefull s-text7 p-l-22 p-r-22" type="text" name="first" placeholder="First Name">
 						</div>
 
 
 
 						<h4 class="m-text15 p-b-20 p-t-5">
-							Family Name	
+							Last Name	
 						</h4>
 
 
 						<div class="bo4 of-hidden size15 m-b-20">
-							<input class="sizefull s-text7 p-l-22 p-r-22" type="text" name="name" placeholder="Family Name">
+							<input class="sizefull s-text7 p-l-22 p-r-22" type="text" name="last" placeholder="Last Name">
 						</div>
 
 
@@ -166,7 +166,7 @@
 
 
 						<div class="bo4 of-hidden size15 m-b-20">
-							<input class="sizefull s-text7 p-l-22 p-r-22" type="text" name="name" placeholder="Password">
+							<input class="sizefull s-text7 p-l-22 p-r-22" type="text" name="pwd" placeholder="Password">
 						</div>
 
 
@@ -188,7 +188,7 @@
 
 
 						<div class="bo4 of-hidden size15 m-b-20">
-							<input class="sizefull s-text7 p-l-22 p-r-22" type="text" name="name" placeholder="E-mail Address">
+							<input class="sizefull s-text7 p-l-22 p-r-22" type="text" name="email" placeholder="E-mail Address">
 						</div>
 
 
@@ -209,9 +209,9 @@
 
 						<div class="w-size25">
 							<!-- Button -->
-							<a href="login2.html" class="flex-c-m size2 bg1 bo-rad-23 hov1 m-text3 trans-0-4">
+							<button  class="flex-c-m size2 bg1 bo-rad-23 hov1 m-text3 trans-0-4">
 								Create Account
-							</a>
+							</button>
 						</div>
 
 					</form>
