Added comments to cart_test

--- a/cart_test/index.html
+++ b/cart_test/index.html
@@ -1,6 +1,9 @@
 <?php
 session_start();
  ?>
+<p>Notes on implementation! Notice the new fields I added under the button tag. These are important! Make sure to 
+        wrap the buttons around a form that redirects to your php file that handles the submission.
+</p>
 <html>
         <p>Avocado </p> <form action="cart.php" method="POST"> <button name="order" type="text" value="Avocado"> Add to cart </button> </form> <br>
         <p>Chips </p> <form action="cart.php" method="POST">  <button  name="order" type="text" value="Chips"> Add to cart </button> </form> <br>
