Changchanged header links to link to php instead of html

--- a/contact.html
+++ b/contact.html
@@ -58,11 +58,11 @@
 					<nav class="menu">
 						<ul class="main_menu">
 							<li>
-								<a href="HomePage.html">Home</a>
+								<a href="HomePage.php">Home</a>
 							</li>
 
 							<li>
-								<a href="menu.html">Menu</a>
+								<a href="menu.php">Menu</a>
 							</li>
 
 							<li>
