--- a/login.html
+++ b/login.html
@@ -137,7 +137,7 @@
 	<section class="bgwhite p-t-66 p-b-60">
 		<div class="container">
 				<div class="col-md-6 p-b-30">
-					<form action="include/login.php" method="POST" class="leave-comment">
+					<form action="include/login.php" method="POST" class="username">
 						<h4 class="m-text26 p-b-36 p-t-15">
 							Username	
 						</h4>
