--- a/contact.html
+++ b/contact.html
@@ -136,7 +136,7 @@
 	<section class="bgwhite p-t-66 p-b-60">
 		<div class="container">
 				<div class="col-md-6 p-b-30">
-					<form class="leave-comment">
+					<form class="leave-comment" action="send_contact.php" method="get">
 						<h4 class="m-text26 p-b-36 p-t-15">
 							Send us your message
 						</h4>
