--- a/checkout.html
+++ b/checkout.html
@@ -364,9 +364,8 @@
 
 						<div class="w-size25">
 							<!-- Button -->
-							<button class="flex-c-m size2 bg1 hov1 m-text3 trans-0-4">
-								Check Out!
-							</button>
+							<input type="submit" value="Submit" class="flex-c-m size2 bg1 hov1 m-text3 trans-0-4">
+								
 						</div>
 
 					</form>
