--- a/checkout.html
+++ b/checkout.html
@@ -65,11 +65,11 @@
 			<nav class="menu">
 				<ul class="main_menu">
 					<li>
-						<a href="index.html">Home</a>
+						<a href="HomePage.php">Home</a>
 					</li>
 
 					<li>
-						<a href="menu.html">Menu</a>
+						<a href="menu.php">Menu</a>
 					</li>
 
 					<li>
