Added manager buttons to all pages

--- a/checkout.html
+++ b/checkout.html
@@ -34,14 +34,13 @@
 	<link rel="stylesheet" type="text/css" href="css/util.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 <!--===============================================================================================-->
-<meta name="viewport" initial-scale=1">
 <style>
 * {
   box-sizing: border-box;
 }
 
 .column {
-  float: .middle;
+  float: middle;
   width: 33.33%;
   padding: 10px;
   height: 800px;
